docs: #15 の進捗とレビュー結果を steering.md に記録する
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>